src/test/deca/context/valid/print_assign.deca
// Description :
// test de l'affichage d'une expression de type void
//
// Résultats :
// ok

{
  int x;
  println(x = 1);
}
